add a Help button
This should eventually lead to docs that instruct the user what they can do with this file.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -257,7 +257,8 @@ a img {
 #leavePrint,
 #leaveTest,
 #resetTest,
-#load-default {
+#load-default,
+.ui-button {
   line-height: 120%;
   border-radius: 3px;
   // background-color: #49ad4c;
