--- a/src/scss/themes.scss
+++ b/src/scss/themes.scss
@@ -272,7 +272,8 @@ html {
     #leavePrint,
     #leaveTest,
     #resetTest,
-    #load-default {
+    #load-default,
+    .ui-button {
       background-color: #49ad4c;
       color: white;
       border-color: #000;
